--- a/index.html
+++ b/index.html
@@ -13,39 +13,39 @@
 
   </header>
 
-  <section class="title">
+  <div class="title">
     <h1>Neat & Natural</h1>
     <p>Naturally Neat, Inside & Out</p>
-  </section>
+  </div>
   
   <section class="services" id="services">
     <h2>Our Services</h2>
     <div class="service-grid">
       <div class="service-card">
-        <img src="images/cleaning.jpg" alt="Domestic Cleaning">
-        <div class="service-text">Domestic Cleaning</div>
+        <img src="img/cleaning.jpg" alt="Domestic Cleaning">
+        <div class="service-text">Domestic <br />Cleaning</div>
         <div class="service-description">Professional home cleaning including weekly or deep cleans.</div>
       </div>
       <div class="service-card">
-        <img src="images/windows.jpg" alt="Window Cleaning">
-        <div class="service-text">Window Cleaning</div>
+        <img src="img/windows.jpg" alt="Window Cleaning">
+        <div class="service-text">Window <br />Cleaning</div>
         <div class="service-description">Interior and exterior window cleaning with a streak-free finish.</div>
       </div>
       <div class="service-card">
-        <img src="images/potting.jpg" alt="Plant Potting">
-        <div class="service-text">Plant Potting</div>
+        <img src="img/potting.jpg" alt="Plant Potting">
+        <div class="service-text">Plant <br />Potting</div>
         <div class="service-description">Indoor and outdoor plant potting and seasonal refresh.</div>
       </div>
       <div class="service-card">
-        <img src="images/flowers.jpg" alt="Flower Planting">
-        <div class="service-text">Flower Planting</div>
+        <img src="img/flowers.jpg" alt="Flower Planting">
+        <div class="service-text">Flower <br />Planting</div>
         <div class="service-description">Planting new blooms and removing wilted flowers for seasonal beauty.</div>
       </div>
-      <div class="service-card">
+      <!--<div class="service-card">
         <img src="images/allotment.jpg" alt="Allotment Care">
-        <div class="service-text">Allotment Care</div>
+        <div class="service-text">Allotment <br />Care</div>
         <div class="service-description">Helping maintain your vegetable plots and garden beds all year round.</div>
-      </div>
+      </div>-->
     </div>
   </section>
 
