--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
     <h2>Our Services</h2>
     <div class="service-grid">
       <div class="service-card">
-        <img src="img/cleaning.jpg" alt="Domestic Cleaning">
+        <img src="img/cleaning.jpg" alt="Domestic Cleaning" loading="lazy">
         <div class="service-text">Domestic <br />Cleaning</div>
         <div class="service-description">Professional home cleaning including weekly or deep cleans.</div>
       </div>
       <div class="service-card">
-        <img src="img/windows.jpg" alt="Window Cleaning">
+        <img src="img/windows.jpg" alt="Window Cleaning" loading="lazy">
         <div class="service-text">Window <br />Cleaning</div>
         <div class="service-description">Interior and exterior window cleaning with a streak-free finish.</div>
       </div>
       <div class="service-card">
-        <img src="img/potting.jpg" alt="Plant Potting">
+        <img src="img/potting.jpg" alt="Plant Potting" loading="lazy">
         <div class="service-text">Plant <br />Potting</div>
         <div class="service-description">Indoor and outdoor plant potting and seasonal refresh.</div>
       </div>
       <div class="service-card">
-        <img src="img/flowers.jpg" alt="Flower Planting">
+        <img src="img/flowers.jpg" alt="Flower Planting" loading="lazy">
         <div class="service-text">Flower <br />Planting</div>
         <div class="service-description">Planting new blooms and removing wilted flowers for seasonal beauty.</div>
       </div>
