Update to styles and text format

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
   <div class="title">
     <h1>Neat & Natural</h1>
-    <p>Naturally Neat, Inside & Out</p>
+    <h2>Naturally Neat, Inside & Out</h2>
+    <p class="about">
+      We are a friendly local service offering professional cleaning and garden care. 
+      We help busy households keep their homes fresh, their gardens thriving, and their lives a little easier.
+    </p>
   </div>
   
   <section class="services" id="services">
@@ -47,14 +51,6 @@
         <div class="service-description">Helping maintain your vegetable plots and garden beds all year round.</div>
       </div>-->
     </div>
-  </section>
-
-  <section class="about">
-    <h2>About Us</h2>
-    <p>
-      Neat & Natural is a friendly local service offering professional cleaning and garden care. 
-      We help busy households keep their homes fresh, their gardens thriving, and their lives a little calmer.
-    </p>
   </section>
 
   <section class="contact">
